--- a/Covid19AppProject2/app/src/main/res/drawable/radius_gray.xml
+++ b/Covid19AppProject2/app/src/main/res/drawable/radius_gray.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#E1E1E1"/>
+        android:color="@color/gray_cc"/>
 
     <corners
         android:radius="10dp"/>
