--- a/Covid19AppProject2/app/src/main/res/layout/fragment_status.xml
+++ b/Covid19AppProject2/app/src/main/res/layout/fragment_status.xml
@@ -175,18 +175,31 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/linearlayout3"
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingHorizontal="5dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:text=" 최근 7일간 신규 확진자 현황"
+                android:textColor="@color/dark_blue"
+                android:paddingVertical="15dp"
+                android:layout_marginHorizontal="20dp"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                android:layout_marginTop="10dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearlayout2">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearlayout2"
+                android:id="@+id/chartTextView"/>
 
-
-            </LinearLayout>
+            <com.github.mikephil.charting.charts.BarChart
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="25dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/chartTextView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/new_Chart"/>
 
 
             <ProgressBar
