--- a/Covid19AppProject2/app/src/main/res/values/colors.xml
+++ b/Covid19AppProject2/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="gray_cc">#cccccc</color>
+    <color name="gray_cc">#E1E1E1</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_red">#FA4343</color>
     <color name="dark_gray">#515151</color>
